feat(app): add QR code rendering functionality Added functionality to render QR codes as images using base64 encoding in the App component

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -84,5 +84,6 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'com.google.zxing:core:3.4.1'
 }
 
